[project]
name = "ComfyUI_BishaNodes"
description = "Custom nodes for ComfyUI to improve promts and image settings"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/vladpro3/ComfyUI_BishaNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vladpro3"
DisplayName = "ComfyUI_BishaNodes"
Icon = ""
